deploy/kubernetes/overlays/nonprod/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ic-nonprod-gateway
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      name: ic-hack-nonprod-gw-params
      group: gateway.kgateway.dev
      kind: GatewayParameters
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
